RESOLVED FIXED167033
Crash when visiting a webpage that uses Gamepads in a new WebProcess after a previous page has used gamepads.
https://bugs.webkit.org/show_bug.cgi?id=167033
Summary Crash when visiting a webpage that uses Gamepads in a new WebProcess after a ...
Brady Eidson
Reported 2017-01-13 16:56:30 PST
Crash when visiting a webpage that uses Gamepads in a new WebProcess after a previous page has used gamepads.
Attachments
Patch (3.53 KB, patch)
2017-01-13 17:17 PST, Brady Eidson
no flags
Brady Eidson
Comment 1 2017-01-13 16:56:56 PST
Brady Eidson
Comment 2 2017-01-13 17:17:05 PST
WebKit Commit Bot
Comment 3 2017-01-13 20:06:05 PST
Comment on attachment 298812 [details] Patch Clearing flags on attachment: 298812 Committed r210761: <http://trac.webkit.org/changeset/210761>
WebKit Commit Bot
Comment 4 2017-01-13 20:06:08 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.