Crash when visiting a webpage that uses Gamepads in a new WebProcess after a previous page has used gamepads.. https://bugs.webkit.org/show_bug.cgi?id=167033

Reviewed by Alex Christensen.

* UIProcess/Gamepad/UIGamepadProvider.cpp:
(WebKit::UIGamepadProvider::processPoolStartedUsingGamepads): Don't schedule a state update here.
(WebKit::UIGamepadProvider::processPoolStoppedUsingGamepads): Ditto.
* UIProcess/Gamepad/UIGamepadProvider.h:

* UIProcess/WebProcessPool.cpp:
(WebKit::WebProcessPool::startedUsingGamepads): Populate the WebProcess with initial gamepads.


Canonical link: https://commits.webkit.org/184134@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@210761 268f45cc-cd09-0410-ab3c-d52691b4dbfc